Fix new tab icon overlap

--- a/src/scss/phy/icons.scss
+++ b/src/scss/phy/icons.scss
@@ -57,8 +57,8 @@
   @include svg-icon-raw('/assets/phy/icons/redesign/status-not-attempted.svg', var(--icon-size), var(--icon-size), var(--mask-size, 60%));
 }
 
-.icon-new-tab {
-  @include svg-icon('/assets/common/icons/new-tab.svg', var(--icon-size), var(--icon-size), var(--mask-size, 60%));
+.icon-preview {
+  @include svg-icon('/assets/common/icons/preview.svg', var(--icon-size), var(--icon-size), var(--mask-size, 60%));
 }
 
 .icon-bin {
